// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`makeConfig with multiple bundles should create config 1`] = `
Object {
  "bundles": Object {
    "app": Object {
      "app": true,
      "assetsDest": "",
      "dependsOn": Array [
        "base_dll",
      ],
      "dev": false,
      "dll": false,
      "entry": Array [
        "./spp.js",
      ],
      "external": false,
      "hasteOptions": Object {},
      "minify": false,
      "minifyOptions": undefined,
      "name": "app",
      "platform": "ios",
      "providesModuleNodeModules": Array [
        "react-native",
      ],
      "root": "<<REPLACED>>/packages/haul-core/src/preset/__tests__",
      "sourceMap": true,
      "type": "indexed-ram-bundle",
    },
    "base_dll": Object {
      "app": false,
      "assetsDest": "",
      "dependsOn": Array [],
      "dev": false,
      "dll": true,
      "entry": Array [
        "./dll.js",
      ],
      "external": false,
      "hasteOptions": Object {},
      "minify": false,
      "minifyOptions": undefined,
      "name": "base_dll",
      "platform": "ios",
      "providesModuleNodeModules": Array [
        "react-native",
      ],
      "root": "<<REPLACED>>/packages/haul-core/src/preset/__tests__",
      "sourceMap": true,
      "type": "indexed-ram-bundle",
    },
    "index": Object {
      "app": false,
      "assetsDest": "",
      "dependsOn": Array [
        "base_dll",
      ],
      "dev": false,
      "dll": false,
      "entry": Array [
        "./host.js",
      ],
      "external": false,
      "hasteOptions": Object {},
      "minify": false,
      "minifyOptions": undefined,
      "name": "index",
      "platform": "ios",
      "providesModuleNodeModules": Array [
        "react-native",
      ],
      "root": "<<REPLACED>>/packages/haul-core/src/preset/__tests__",
      "sourceMap": true,
      "type": "basic-bundle",
    },
  },
  "platforms": Array [
    "ios",
    "android",
  ],
  "server": Object {
    "host": "localhost",
    "port": 8081,
  },
  "templates": Object {
    "filename": Object {
      "__server__": "[bundleName].[platform].bundle",
      "android": "[bundleName].[platform].bundle",
      "ios": "[bundleName].jsbundle",
    },
  },
  "webpackConfigs": Object {
    "app": Object {
      "context": "<<REPLACED>>/packages/haul-core/src/preset/__tests__",
      "devtool": false,
      "entry": Array [
        "./spp.js",
      ],
      "mode": "production",
      "output": Object {
        "filename": "app.jsbundle",
        "globalObject": "this",
        "library": "app",
        "libraryTarget": "this",
        "path": "<<REPLACED>>/packages/haul-core/src/preset/__tests__",
        "publicPath": "http://localhost:8081/",
      },
      "plugins": Array [
        DefinePlugin {
          "definitions": Object {
            "__DEV__": false,
            "process.env": Object {
              "NODE_ENV": "\\"production\\"",
            },
          },
        },
        LoaderOptionsPlugin {
          "options": Object {
            "debug": false,
            "minimize": false,
            "test": Object {
              "test": [Function],
            },
          },
        },
        SourceMapDevToolPlugin {
          "fallbackModuleFilenameTemplate": "webpack://[namespace]/[resourcePath]?[hash]",
          "moduleFilenameTemplate": "[absolute-resource-path]",
          "namespace": "",
          "options": Object {
            "filename": "[file].map",
            "module": true,
            "moduleFilenameTemplate": "[absolute-resource-path]",
            "test": /\\\\\\.\\(js\\|jsx\\|css\\|ts\\|tsx\\|\\(js\\)\\?bundle\\)\\(\\$\\|\\\\\\?\\)/i,
          },
          "sourceMapFilename": "[file].map",
          "sourceMappingURLComment": "
//# sourceMappingURL=[url]",
        },
        WebpackRamBundlePlugin {
          "bundleName": "index",
          "indexRamBundle": true,
          "minify": false,
          "minifyOptions": undefined,
          "modules": Array [],
          "name": "WebpackRamBundlePlugin",
          "preloadBundles": Array [
            "base_dll",
          ],
          "singleBundleMode": false,
          "sourceMap": true,
        },
        DllReferencePlugin {
          "options": Object {
            "context": "<<REPLACED>>/packages/haul-core/src/preset/__tests__",
            "manifest": "<<REPLACED>>/packages/haul-core/src/preset/__tests__/base_dll.manifest.json",
            "sourceType": "this",
          },
        },
      ],
      "target": "webworker",
    },
    "base_dll": Object {
      "context": "<<REPLACED>>/packages/haul-core/src/preset/__tests__",
      "devtool": false,
      "entry": Array [
        "./dll.js",
      ],
      "mode": "production",
      "output": Object {
        "filename": "base_dll.jsbundle",
        "globalObject": "this",
        "library": "base_dll",
        "libraryTarget": "this",
        "path": "<<REPLACED>>/packages/haul-core/src/preset/__tests__",
        "publicPath": "http://localhost:8081/",
      },
      "plugins": Array [
        DefinePlugin {
          "definitions": Object {
            "__DEV__": false,
            "process.env": Object {
              "NODE_ENV": "\\"production\\"",
            },
          },
        },
        LoaderOptionsPlugin {
          "options": Object {
            "debug": false,
            "minimize": false,
            "test": Object {
              "test": [Function],
            },
          },
        },
        SourceMapDevToolPlugin {
          "fallbackModuleFilenameTemplate": "webpack://[namespace]/[resourcePath]?[hash]",
          "moduleFilenameTemplate": "[absolute-resource-path]",
          "namespace": "",
          "options": Object {
            "filename": "[file].map",
            "module": true,
            "moduleFilenameTemplate": "[absolute-resource-path]",
            "test": /\\\\\\.\\(js\\|jsx\\|css\\|ts\\|tsx\\|\\(js\\)\\?bundle\\)\\(\\$\\|\\\\\\?\\)/i,
          },
          "sourceMapFilename": "[file].map",
          "sourceMappingURLComment": "
//# sourceMappingURL=[url]",
        },
        WebpackRamBundlePlugin {
          "bundleName": "index",
          "indexRamBundle": true,
          "minify": false,
          "minifyOptions": undefined,
          "modules": Array [],
          "name": "WebpackRamBundlePlugin",
          "preloadBundles": Array [],
          "singleBundleMode": false,
          "sourceMap": true,
        },
        DllPlugin {
          "options": Object {
            "name": "base_dll",
            "path": "<<REPLACED>>/packages/haul-core/src/preset/__tests__/base_dll.manifest.json",
          },
        },
      ],
      "target": "webworker",
    },
    "index": Object {
      "context": "<<REPLACED>>/packages/haul-core/src/preset/__tests__",
      "devtool": false,
      "entry": Array [
        "./host.js",
      ],
      "mode": "production",
      "output": Object {
        "filename": "index.jsbundle",
        "globalObject": "this",
        "path": "<<REPLACED>>/packages/haul-core/src/preset/__tests__",
        "publicPath": "http://localhost:8081/",
      },
      "plugins": Array [
        DefinePlugin {
          "definitions": Object {
            "__DEV__": false,
            "process.env": Object {
              "NODE_ENV": "\\"production\\"",
            },
          },
        },
        LoaderOptionsPlugin {
          "options": Object {
            "debug": false,
            "minimize": false,
            "test": Object {
              "test": [Function],
            },
          },
        },
        SourceMapDevToolPlugin {
          "fallbackModuleFilenameTemplate": "webpack://[namespace]/[resourcePath]?[hash]",
          "moduleFilenameTemplate": "[absolute-resource-path]",
          "namespace": "",
          "options": Object {
            "filename": "[file].map",
            "module": true,
            "moduleFilenameTemplate": "[absolute-resource-path]",
            "test": /\\\\\\.\\(js\\|jsx\\|css\\|ts\\|tsx\\|\\(js\\)\\?bundle\\)\\(\\$\\|\\\\\\?\\)/i,
          },
          "sourceMapFilename": "[file].map",
          "sourceMappingURLComment": "
//# sourceMappingURL=[url]",
        },
        WebpackBasicBundlePlugin {
          "bundle": true,
          "preloadBundles": Array [
            "base_dll",
          ],
          "sourceMap": true,
        },
        DllReferencePlugin {
          "options": Object {
            "context": "<<REPLACED>>/packages/haul-core/src/preset/__tests__",
            "manifest": "<<REPLACED>>/packages/haul-core/src/preset/__tests__/base_dll.manifest.json",
            "sourceType": "this",
          },
        },
      ],
      "target": "webworker",
    },
  },
}
`;

exports[`makeConfig with multiple bundles should create config for packager server 1`] = `
Object {
  "bundles": Object {
    "app": Object {
      "app": true,
      "assetsDest": "",
      "dependsOn": Array [
        "base_dll",
      ],
      "dev": false,
      "dll": false,
      "entry": Array [
        "./spp.js",
      ],
      "external": false,
      "hasteOptions": Object {},
      "minify": false,
      "minifyOptions": undefined,
      "name": "app",
      "platform": "ios",
      "providesModuleNodeModules": Array [
        "react-native",
      ],
      "root": "<<REPLACED>>/packages/haul-core/src/preset/__tests__",
      "sourceMap": true,
      "type": "basic-bundle",
    },
    "base_dll": Object {
      "app": false,
      "assetsDest": "",
      "dependsOn": Array [],
      "dev": false,
      "dll": true,
      "entry": Array [
        "./dll.js",
      ],
      "external": false,
      "hasteOptions": Object {},
      "minify": false,
      "minifyOptions": undefined,
      "name": "base_dll",
      "platform": "ios",
      "providesModuleNodeModules": Array [
        "react-native",
      ],
      "root": "<<REPLACED>>/packages/haul-core/src/preset/__tests__",
      "sourceMap": true,
      "type": "basic-bundle",
    },
    "index": Object {
      "app": false,
      "assetsDest": "",
      "dependsOn": Array [
        "base_dll",
      ],
      "dev": false,
      "dll": false,
      "entry": Array [
        "./host.js",
      ],
      "external": false,
      "hasteOptions": Object {},
      "minify": false,
      "minifyOptions": undefined,
      "name": "index",
      "platform": "ios",
      "providesModuleNodeModules": Array [
        "react-native",
      ],
      "root": "<<REPLACED>>/packages/haul-core/src/preset/__tests__",
      "sourceMap": true,
      "type": "basic-bundle",
    },
  },
  "platforms": Array [
    "ios",
    "android",
  ],
  "server": Object {
    "host": "localhost",
    "port": 8081,
  },
  "templates": Object {
    "filename": Object {
      "__server__": "[bundleName].[platform].bundle",
      "android": "[bundleName].[platform].bundle",
      "ios": "[bundleName].jsbundle",
    },
  },
  "webpackConfigs": Object {
    "app": Object {
      "context": "<<REPLACED>>/packages/haul-core/src/preset/__tests__",
      "devtool": false,
      "entry": Array [
        "./spp.js",
      ],
      "mode": "production",
      "output": Object {
        "filename": "app.ios.bundle",
        "globalObject": "this",
        "library": "app",
        "libraryTarget": "this",
        "path": "<<REPLACED>>/packages/haul-core/src/preset/__tests__",
        "publicPath": "http://localhost:8081/",
      },
      "plugins": Array [
        DefinePlugin {
          "definitions": Object {
            "__DEV__": false,
            "process.env": Object {
              "NODE_ENV": "\\"production\\"",
            },
          },
        },
        LoaderOptionsPlugin {
          "options": Object {
            "debug": false,
            "minimize": false,
            "test": Object {
              "test": [Function],
            },
          },
        },
        SourceMapDevToolPlugin {
          "fallbackModuleFilenameTemplate": "webpack://[namespace]/[resourcePath]?[hash]",
          "moduleFilenameTemplate": "[absolute-resource-path]",
          "namespace": "",
          "options": Object {
            "filename": "[file].map",
            "module": true,
            "moduleFilenameTemplate": "[absolute-resource-path]",
            "test": /\\\\\\.\\(js\\|jsx\\|css\\|ts\\|tsx\\|\\(js\\)\\?bundle\\)\\(\\$\\|\\\\\\?\\)/i,
          },
          "sourceMapFilename": "[file].map",
          "sourceMappingURLComment": "
//# sourceMappingURL=[url]",
        },
        WebpackBasicBundlePlugin {
          "bundle": false,
          "preloadBundles": Array [
            "base_dll",
          ],
          "sourceMap": true,
        },
        DllReferencePlugin {
          "options": Object {
            "context": "<<REPLACED>>/packages/haul-core/src/preset/__tests__",
            "manifest": "<<REPLACED>>/packages/haul-core/src/preset/__tests__/base_dll.manifest.json",
            "sourceType": "this",
          },
        },
      ],
      "target": "webworker",
    },
    "base_dll": Object {
      "context": "<<REPLACED>>/packages/haul-core/src/preset/__tests__",
      "devtool": false,
      "entry": Array [
        "./dll.js",
      ],
      "mode": "production",
      "output": Object {
        "filename": "base_dll.ios.bundle",
        "globalObject": "this",
        "library": "base_dll",
        "libraryTarget": "this",
        "path": "<<REPLACED>>/packages/haul-core/src/preset/__tests__",
        "publicPath": "http://localhost:8081/",
      },
      "plugins": Array [
        DefinePlugin {
          "definitions": Object {
            "__DEV__": false,
            "process.env": Object {
              "NODE_ENV": "\\"production\\"",
            },
          },
        },
        LoaderOptionsPlugin {
          "options": Object {
            "debug": false,
            "minimize": false,
            "test": Object {
              "test": [Function],
            },
          },
        },
        SourceMapDevToolPlugin {
          "fallbackModuleFilenameTemplate": "webpack://[namespace]/[resourcePath]?[hash]",
          "moduleFilenameTemplate": "[absolute-resource-path]",
          "namespace": "",
          "options": Object {
            "filename": "[file].map",
            "module": true,
            "moduleFilenameTemplate": "[absolute-resource-path]",
            "test": /\\\\\\.\\(js\\|jsx\\|css\\|ts\\|tsx\\|\\(js\\)\\?bundle\\)\\(\\$\\|\\\\\\?\\)/i,
          },
          "sourceMapFilename": "[file].map",
          "sourceMappingURLComment": "
//# sourceMappingURL=[url]",
        },
        WebpackBasicBundlePlugin {
          "bundle": false,
          "preloadBundles": Array [],
          "sourceMap": true,
        },
        DllPlugin {
          "options": Object {
            "name": "base_dll",
            "path": "<<REPLACED>>/packages/haul-core/src/preset/__tests__/base_dll.manifest.json",
          },
        },
      ],
      "target": "webworker",
    },
    "index": Object {
      "context": "<<REPLACED>>/packages/haul-core/src/preset/__tests__",
      "devtool": false,
      "entry": Array [
        "./host.js",
      ],
      "mode": "production",
      "output": Object {
        "filename": "index.ios.bundle",
        "globalObject": "this",
        "path": "<<REPLACED>>/packages/haul-core/src/preset/__tests__",
        "publicPath": "http://localhost:8081/",
      },
      "plugins": Array [
        DefinePlugin {
          "definitions": Object {
            "__DEV__": false,
            "process.env": Object {
              "NODE_ENV": "\\"production\\"",
            },
          },
        },
        LoaderOptionsPlugin {
          "options": Object {
            "debug": false,
            "minimize": false,
            "test": Object {
              "test": [Function],
            },
          },
        },
        SourceMapDevToolPlugin {
          "fallbackModuleFilenameTemplate": "webpack://[namespace]/[resourcePath]?[hash]",
          "moduleFilenameTemplate": "[absolute-resource-path]",
          "namespace": "",
          "options": Object {
            "filename": "[file].map",
            "module": true,
            "moduleFilenameTemplate": "[absolute-resource-path]",
            "test": /\\\\\\.\\(js\\|jsx\\|css\\|ts\\|tsx\\|\\(js\\)\\?bundle\\)\\(\\$\\|\\\\\\?\\)/i,
          },
          "sourceMapFilename": "[file].map",
          "sourceMappingURLComment": "
//# sourceMappingURL=[url]",
        },
        WebpackBasicBundlePlugin {
          "bundle": false,
          "preloadBundles": Array [
            "base_dll",
          ],
          "sourceMap": true,
        },
        DllReferencePlugin {
          "options": Object {
            "context": "<<REPLACED>>/packages/haul-core/src/preset/__tests__",
            "manifest": "<<REPLACED>>/packages/haul-core/src/preset/__tests__/base_dll.manifest.json",
            "sourceType": "this",
          },
        },
      ],
      "target": "webworker",
    },
  },
}
`;

exports[`makeConfig with single bundle should create config for basic-bundle 1`] = `
Object {
  "bundles": Object {
    "index": Object {
      "app": false,
      "assetsDest": "",
      "dependsOn": Array [],
      "dev": false,
      "dll": false,
      "entry": Array [
        "index.js",
      ],
      "external": false,
      "hasteOptions": Object {},
      "minify": false,
      "minifyOptions": undefined,
      "name": "index",
      "platform": "ios",
      "providesModuleNodeModules": Array [
        "react-native",
      ],
      "root": "<<REPLACED>>/packages/haul-core/src/preset/__tests__",
      "sourceMap": true,
      "type": "basic-bundle",
    },
  },
  "platforms": Array [
    "ios",
    "android",
  ],
  "server": Object {
    "host": "localhost",
    "port": 8081,
  },
  "templates": Object {
    "filename": Object {
      "__server__": "[bundleName].[platform].bundle",
      "android": "[bundleName].[platform].bundle",
      "ios": "[bundleName].jsbundle",
    },
  },
  "webpackConfigs": Object {
    "index": Object {
      "context": "<<REPLACED>>/packages/haul-core/src/preset/__tests__",
      "devtool": false,
      "entry": Array [
        "index.js",
      ],
      "mode": "production",
      "output": Object {
        "filename": "index.jsbundle",
        "globalObject": "this",
        "path": "<<REPLACED>>/packages/haul-core/src/preset/__tests__",
        "publicPath": "http://localhost:8081/",
      },
      "plugins": Array [
        DefinePlugin {
          "definitions": Object {
            "__DEV__": false,
            "process.env": Object {
              "NODE_ENV": "\\"production\\"",
            },
          },
        },
        LoaderOptionsPlugin {
          "options": Object {
            "debug": false,
            "minimize": false,
            "test": Object {
              "test": [Function],
            },
          },
        },
        SourceMapDevToolPlugin {
          "fallbackModuleFilenameTemplate": "webpack://[namespace]/[resourcePath]?[hash]",
          "moduleFilenameTemplate": "[absolute-resource-path]",
          "namespace": "",
          "options": Object {
            "filename": "[file].map",
            "module": true,
            "moduleFilenameTemplate": "[absolute-resource-path]",
            "test": /\\\\\\.\\(js\\|jsx\\|css\\|ts\\|tsx\\|\\(js\\)\\?bundle\\)\\(\\$\\|\\\\\\?\\)/i,
          },
          "sourceMapFilename": "[file].map",
          "sourceMappingURLComment": "
//# sourceMappingURL=[url]",
        },
        WebpackBasicBundlePlugin {
          "bundle": false,
          "preloadBundles": Array [],
          "sourceMap": true,
        },
      ],
      "target": "webworker",
    },
  },
}
`;
